--- a/www/index.html
+++ b/www/index.html
@@ -13,9 +13,11 @@
     -->
 
     <!-- ionic/angularjs js -->
+      <script src="js/jquery.min.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="js/jquery.min.js"></script>
+
       <script src="js/jquery-dateFormat.min.js"></script>
+       <script src="js/angular-file-upload.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
