--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,11 @@
 
     <!-- ionic/angularjs js -->
       <script src="js/jquery.min.js"></script>
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+
+      <script src="js/RecordRTC.js"></script>
+      <script src="js/adapter.js"></script>
+
+      <script src="lib/ionic/js/ionic.bundle.js"></script>
 
       <script src="js/jquery-dateFormat.min.js"></script>
        <script src="js/angular-file-upload.min.js"></script>
