--- a/www/index.html
+++ b/www/index.html
@@ -14,14 +14,19 @@
 
     <!-- ionic/angularjs js -->
       <script src="js/jquery.min.js"></script>
+      <script src="js/jquery.qrcode.js"></script>
+      <script src="js/qrcode.js"></script>
 
       <script src="js/RecordRTC.js"></script>
       <script src="js/adapter.js"></script>
 
       <script src="lib/ionic/js/ionic.bundle.js"></script>
+      <script src="lib/ion-tree-list/ion-tree-list.js"></script>
 
       <script src="js/jquery-dateFormat.min.js"></script>
-       <script src="js/angular-file-upload.min.js"></script>
+      <script src="js/angular-file-upload.min.js"></script>
+      <script src="js/mn-touch.js"></script>
+
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
