--- a/www/index.html
+++ b/www/index.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <script type="application/javascript" src="js/jquery.min.js"></script>
     <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
-
-    <!-- ionic/angularjs js -->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/jquery.qrcode.js"></script>
-      <script src="js/qrcode.js"></script>
-
-      <script src="js/RecordRTC.js"></script>
-      <script src="js/adapter.js"></script>
-
-      <script src="lib/ionic/js/ionic.bundle.js"></script>
-      <script src="lib/ion-tree-list/ion-tree-list.js"></script>
-
-      <script src="js/jquery-dateFormat.min.js"></script>
-      <script src="js/angular-file-upload.min.js"></script>
-      <script src="js/mn-touch.js"></script>
 
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="out/main.js"></script>
-    <!--<script src="js/controllers.js"></script>-->
-  </head>
 
-  <body ng-app="starter">
-    <ion-nav-view></ion-nav-view>
-  </body>
+    <script type="text/javascript">
+
+        //$.get()
+
+        function load(){
+            if(!localStorage.serverurl)localStorage.serverurl="http://111.1.76.108:3007/";
+
+            $.ajax({
+                url: localStorage.serverurl+"hellohospitaloa",
+                success: function(data){
+                    window.location='./main.html';
+                },
+                error:function(data){
+                    var theResponse = window.prompt("服务地址",localStorage.serverurl);
+                    if(theResponse)localStorage.serverurl=theResponse;
+                    else  localStorage.serverurl="http://111.1.76.108:3007/";
+                    window.location.href="";
+                },
+                timeout: 3000 //in milliseconds
+            });
+
+        }
+
+
+
+    </script>
+
+
+
+
+</head>
+
+
+<body onload="load()">
+
+</body>
 </html>
